@@ -1,3 +1,4 @@
+	* fixed not passing &supportcrypto=1 when encryption is disabled
 	* introduced an upload mode, which torrents are switched into when
 	  it hits a disk write error, instead of stopping the torrent.
 	  this lets libtorrent keep uploading the parts it has when it
